umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_github192.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 30
bond_count: 29
sum_formula: C30
graph6: "]sO_OGA?O@?C?C?C??O?@??C??G??G??G??A???G???_??@???A???@????G???@????C????O"
