umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_github443.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 32
sum_formula: C20MgN4
graph6: XH?GG???C?b??o?KO??_??_@??_O?e????F@?W??A?O?C???C?@
