umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_glyphe.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 30
bond_count: 30
sum_formula: C11H14N2O3
graph6: "]i_GGG@?G?_@?@??_AGA?_?A???_??O??@???G??@???@???@????_???G???@????C????O??"
